@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed a wrong coefficient in the ShakeMap amplification
   * Fixed a bug in the hazard curves export (the filename did not contain
     the period of the IMT thus producing duplicated files)
   * Parallelized the reading of the exposure
